solved bug of slim gap between home and services for the stripe animation

--- a/client/src/components/home/Home.css
+++ b/client/src/components/home/Home.css
@@ -103,14 +103,16 @@ body[data-theme="dark"] .home-logo-container .home-logo.dark-logo {
 .stripes-container {
   position: absolute;
   top: 0;
-  right: 0;
+  right: -1px;
   width: 55%;
   height: 100%;
   display: flex;
+  flex-direction: row-reverse; /* niente flip: render naturale da destra */
+  justify-content: flex-start;
   pointer-events: none;
-  justify-content: flex-end;
   z-index: 1000;
-  transform: scaleX(-1);
+  backface-visibility: hidden;
+  transform: translateZ(0);
 }
 
 .stripe {
@@ -118,8 +120,10 @@ body[data-theme="dark"] .home-logo-container .home-logo.dark-logo {
   height: 100%;
   background-color: var(--foreground-color);
   transform: scaleX(0);
-  margin-left: -2px;
+  transform-origin: right center; /* ora “crescono” da destra verso sinistra */
+  margin-right: -2px;             /* overlap dalla parte giusta */
   transition: background-color 0.5s ease;
+  will-change: transform;
 }
 
 @media screen and (max-width: 768px) {
